# messenger_backend

./: .dockerignore  .env.DEV.example  .gitignore  Dockerfile  Dockerfile.dev  INSTRUCTIONS.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  requirements.txt  run.py  s3_cors.json  start.sh
app/: auth_utils.py  init_db.py  main.py  models.py  requirements.PROD.txt  schemas.py  storage.py  websocket.py  websocket_manager.py  websocket_utils.py
app/api/: dependencies.py
app/core/: config.py  events.py  file_parser.py  schema.py  slug.py  task_queue.py  text_splitter.py  vector.py  websocket.py
app/db/: session.py
app/managers/: user_manager.py
app/models/: domain.py
app/repositories/: ai_conversation_repository.py  base_repository.py  channel_repository.py  direct_message_repository.py  file_repository.py  message_repository.py  user_repository.py  vector_repository.py  workspace_repository.py
app/routes/: __init__.py  auth.py  channels.py  conversations.py  direct_messages.py  files.py  health.py  messages.py  search.py  users.py  websocket.py  workspaces.py
app/scripts/: cleanup_db.py
app/services/: ai_conversation_service.py  base_service.py  channel_service.py  direct_message_service.py  embedding_service.py  file_service.py  membership_service.py  message_service.py  user_service.py  vector_service.py  websocket_service.py  workspace_permission_service.py  workspace_service.py
app/utils/: access.py  auth.py  db.py  errors.py  time.py
tests/: conftest.py
tests/api/: test_ai.py  test_auth.py  test_channels.py  (+7 more)
(+39 files in other folders)
